test/conformance/chainsaw/globalcontext/resource-correct/clusterpolicy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-resource-correct
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
