test/conformance/chainsaw/globalcontext/resource-correct/gctxentry.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
  name: gctxentry-resource-correct
spec:
  kubernetesResource:
    group: apps
    version: v1
    resource: deployments
    namespace: test-globalcontext-resource-correct
