test/conformance/chainsaw/globalcontext/resource-correct/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-globalcontext-resource-correct
