test/conformance/chainsaw/globalcontext/resource-correct/new-deployment-exists.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: test-globalcontext-resource-correct
  labels:
    app: new-deployment
