test/conformance/chainsaw/globalcontext/resource-correct/new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: test-globalcontext-resource-correct
  labels:
    app: new-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-deployment
  template:
    metadata:
      labels:
        app: new-deployment
    spec:
      containers:
        - name: pause
          image: registry.k8s.io/pause:latest
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 10m
              memory: 10Mi
      terminationGracePeriodSeconds: 0
