test/conformance/chainsaw/globalcontext/resource-correct/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-resource-correct
spec:
  failurePolicy: Fail
  rules:
  - name: main-deployment-exists
    context:
    - name: deploymentCount
      globalReference:
        name: gctxentry-resource-correct
        jmesPath: "length(@)"
    match:
      all:
      - resources:
          kinds:
          - Pod
          namespaces:
          - test-globalcontext-resource-correct
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      failureAction: Enforce
      deny:
        conditions:
          any:
          - key: "{{ deploymentCount }}"
            operator: Equal
            value: 0
