test/conformance/chainsaw/globalcontext/resource-correct/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-correct
spec:
  steps:
  - name: setup resources and globalcontextentry
    try:
    - apply:
        file: namespace.yaml
    - apply:
        file: main-configmap.yaml
    - apply:
        file: gctxentry.yaml
    - assert:
        file: gctxentry.yaml
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-resource-correct
  - name: test policy validation
    try:
    - apply:
        file: new-configmap.yaml
    - assert:
        file: new-configmap-exists.yaml
